# ml-shopping-indicator

./: README.md  proyecto-shopping-indicator.ipynb  pyproject.toml  requirements.txt
src/: main.py
src/dtos/: schemas.py
src/services/: connect_to_model_service.py
